# Arona

./: .dockerignore  .gitignore  GIT_MIGRATION_COMMANDS.sh  LEGACY_DATA_FIX_SUMMARY.md  QUICK_FIX_GPU_ERROR.md  README.md  README_NEW_ARCHITECTURE.md  REINDEXING_IMPLEMENTATION_SUMMARY.md  REINDEX_ERROR_FIX.md  TROUBLESHOOTING.md  compose.yml  env.backend.example  env.example  mineru.json  model_download_report.json  model_download_report_rerun.json  model_verification_report.json  model_verification_report_rerun.json  phase_p2_validation_report.json  pyproject.toml  requirements-backend-qwen3vl.txt  requirements-backend.txt  requirements-frontend.txt  setup.py
.github/workflows/: linting.yaml
_TASKs/: T1_frontend-ui-redesign.md  T2_COMPLETION_ANALYSIS.md  T2_FINAL_SUMMARY.md  T2_react-frontend-migration.md  T3_frontend-migration-deployment.md  T4_document-management-graph-visualization.md  T5_document-indexing-automation.md  T6_reindex-processing-status.md  T6_reindex-processing-status_checklist.md  T7_P5_performance_analysis.md  T7_local_embedding_service.md  T7_local_embedding_service_supplementary_info.md  T8_chat-ui-sessions-sqlite.md
backend/: __init__.py  config.py  main.py
backend/data/: chat.db  index_status.db
backend/models/: __init__.py  chat.py  config.py  document.py  graph.py  index_status.py  query.py
backend/providers/: __init__.py  base.py  jina.py  local_embedding.py  openai.py  qwen3_vl.py  reranker_wrappers.py
backend/routers/: __init__.py  chat.py  config.py  documents.py  files.py  graph.py  health.py  query.py
backend/services/: __init__.py  background_indexer.py  chat_store.py  file_scanner.py  index_status_service.py  model_factory.py  rag_service.py
backend/tests/: __init__.py  test_batch_processor.py  test_chat_api.py  test_chat_store.py  test_graph_api.py
backend/utils/: env_file.py  torch_runtime.py
configs/: cluster.yaml  cluster.yaml.example  model_providers.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  nginx.conf
docs/: API_RERANKER_IMPLEMENTATION.md  ARCHITECTURE_REDESIGN.md  BEFORE_AFTER_COMPARISON.md  BUGFIX_LOGGER_ERROR.md  CONFIGURATION.md  FIXES_SUMMARY.md  FRONTEND_QUICKSTART.md  FRONTEND_REDESIGN.md  FRONTEND_REDESIGN_V2.md  GPU_COMPATIBILITY.md  GRADIO_VS_REACT_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  JINA_EMBEDDING_FIX.md  MANUAL_REINDEXING.md  MINERU_NETWORK_ISSUES.md  QUICKSTART_GUIDE_en.md  QUICKSTART_GUIDE_zh.md  QUICKSTART_NEW_ARCHITECTURE.md  QUICK_REFERENCE.md  REACT_ARCHITECTURE.md  REACT_MIGRATION_COMPLETED.md  REACT_MIGRATION_GUIDE.md  REACT_MIGRATION_SUMMARY.md  REDESIGN_SUMMARY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  UI_QUICK_REFERENCE.md  USER_GUIDE_REINDEXING.md
docs/deployment/: REACT_DEPLOYMENT.md  TESTING.md  cluster_architecture.md  configuration.md  orchestration.md
examples/: README_API_RERANKER.md  api_reranker_quickstart.py
frontend/: PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE7_SUMMARY.md  README.md  SETUP_GUIDE.md  env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend-gradio-legacy/: app.py
frontend/e2e/: chat.spec.ts  documents.spec.ts  sessions.spec.ts  settings.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  client.ts  config.ts  documents.ts  graph.ts  health.ts  index.ts  query.ts
frontend/src/hooks/: index.ts  useChat.ts  useChatConfig.ts  useChatSessions.ts  useConfig.ts  useDocuments.ts  useGraph.ts  useIndexStatus.ts  useIndexingConfig.ts  useKeyboardShortcut.ts
frontend/src/lib/: clipboard.ts  queryClient.ts  toast.ts
frontend/src/store/: chatStore.ts  index.ts  settingsStore.ts
frontend/src/types/: api.ts  chat.ts  config.ts  document.ts  graph.ts  index-status.ts  index.ts
frontend/src/utils/: constants.ts  formatters.ts  index.ts  validators.ts
logs/: .nfs0000000a80e84f2d00000283
raganything/: __init__.py  config.py  modalprocessors.py  parser.py  processor.py  query.py  raganything.py
raganything/clients/: __init__.py  ollama.py
raganything/rerankers/: __init__.py  api_reranker.py  flagembedding.py
scripts/: benchmark_end_to_end_rag.py  benchmark_local_embedding.py  benchmark_parsers.py  check_config.py  cluster_rag_worker.py  diagnose_gpu_mineru.py  download_local_models.py  download_mineru_models.sh  example_local_provider_usage.py  fix-tailwind-setup.sh  fix_mineru_network.sh  login_env.sh  rag_api_server.py  setup-react-frontend.sh  setup_env.sh  start_all.sh  start_backend.sh  start_frontend.sh  verify_model_loading.py  verify_pascal.py  warmup_embedding_model.sh
scripts/slurm/: ollama_gpu_job.sh  rag_worker_job.sh
(+46 files in other folders)
