[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arona"
dynamic = ["version"]
authors = [
    {name = "Zhen Huang"}
]
description = "Arona: All-in-One RAG System"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.118.0",
    "huggingface_hub",
    "lightrag-hku",
    "mineru[core]",
    # Default local GPU stack: Qwen3-VL embedding + reranking
    # Note: For GTX 1080 Ti (Pascal, sm_61), prefer CUDA 11.8 wheels.
    "torch==2.7.1+cu118",
    "torchvision==0.24.1",
    "triton==3.3.1; platform_machine == 'x86_64' and sys_platform == 'linux'",
    "transformers>=4.57.0",
    "qwen-vl-utils>=0.0.14",
    "sentence-transformers>=2.3.0",
    "accelerate>=0.25.0",
    "safetensors>=0.4.0",
    "numpy<2",
    "pillow>=10.0.0",
    "tqdm",
    "uvicorn>=0.37.0",
    "python-dotenv",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
image = ["Pillow>=10.0.0"]
text = ["reportlab>=4.0.0"]
office = []  # Requires LibreOffice (external program)
markdown = [
    "markdown>=3.4.0",
    "weasyprint>=60.0",
    "pygments>=2.10.0",
]
all = [
    "Pillow>=10.0.0",
    "reportlab>=4.0.0",
    "markdown>=3.4.0",
    "weasyprint>=60.0",
    "pygments>=2.10.0"
]

[project.urls]
Homepage = "https://github.com/ZhenHuangLab/Arona"
Documentation = "https://github.com/ZhenHuangLab/Arona"
Repository = "https://github.com/ZhenHuangLab/Arona"
Issues = "https://github.com/ZhenHuangLab/Arona/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "openai",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["raganything*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "raganything.__version__"}

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
norecursedirs = ["scripts", "examples", "rag_storage", "uploads", "frontend", "logs", ".venv"]
